# ChangeLog for app-admin/eselect-ctags
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-ctags/ChangeLog,v 1.31 2009/04/29 13:03:00 ulm Exp $

  29 Apr 2009; Ulrich Mueller <ulm@gentoo.org> -eselect-ctags-1.5.ebuild:
  Remove old.

  29 Apr 2009; Raúl Porcel <armin76@gentoo.org> eselect-ctags-1.8.ebuild:
  m68k stable

  12 Mar 2009; Brent Baude <ranger@gentoo.org> eselect-ctags-1.8.ebuild:
  Marking eselect-ctags-1.8 ppc64 for bug 256113

  19 Feb 2009; nixnut <nixnut@gentoo.org> eselect-ctags-1.8.ebuild:
  ppc stable #256113

  06 Feb 2009; Jeroen Roovers <jer@gentoo.org> eselect-ctags-1.8.ebuild:
  Stable for HPPA (bug #256113).

  27 Jan 2009; Raúl Porcel <armin76@gentoo.org> eselect-ctags-1.8.ebuild:
  alpha/arm/ia64/s390/sh stable wrt #256113

  25 Jan 2009; Markus Meier <maekke@gentoo.org> eselect-ctags-1.8.ebuild:
  amd64/x86 stable, bug #256113

  23 Jan 2009; Ferris McCormick <fmccor@gentoo.org>
  eselect-ctags-1.8.ebuild:
  Sparc stable, Bug #256113.

  23 Jan 2009; Ulrich Mueller <ulm@gentoo.org> -eselect-ctags-1.7.ebuild,
  eselect-ctags-1.8.ebuild:
  Remove unnecessary die messages. Clean up.

*eselect-ctags-1.8 (21 Dec 2008)

  21 Dec 2008; Ulrich Mueller <ulm@gentoo.org> +eselect-ctags-1.8.ebuild:
  Version bump.

*eselect-ctags-1.7 (19 Dec 2008)

  19 Dec 2008; Ulrich Mueller <ulm@gentoo.org> -eselect-ctags-1.6.ebuild,
  +eselect-ctags-1.7.ebuild:
  Version bump. Remove intermediate version.

*eselect-ctags-1.6 (12 Dec 2008)

  12 Dec 2008; Ulrich Mueller <ulm@gentoo.org> +eselect-ctags-1.6.ebuild:
  Version bump.

  25 Oct 2008; Ulrich Mueller <ulm@gentoo.org> -eselect-ctags-1.3.ebuild:
  Remove old.

  04 Jul 2008; Jeroen Roovers <jer@gentoo.org> eselect-ctags-1.5.ebuild:
  Stable for HPPA (bug #229605).

  28 Jun 2008; Raúl Porcel <armin76@gentoo.org> eselect-ctags-1.5.ebuild:
  alpha/ia64 stable wrt #229605
