@@ -1,4 +1,6 @@
 DIST eselect-emacs-1.8.tar.bz2 7764 RMD160 44d568e62264bde26fe9d6f74cbb0178dc3b8dd1 SHA1 a399ff9beec3ec4e5aeb66a25de2807f228decc0 SHA256 615962152ce33a7c1a0ac1a1d8d1f8ef4a0939f0931ed75e50915dd7879cc590
+DIST eselect-emacs-1.9.tar.bz2 7896 RMD160 94d3ee26c4a5e59145466e3bb2df40db1724d2e3 SHA1 b9e0ac26e29d4c9263a7881c7ed1d2502ea50c0e SHA256 9db11759c227e4cbefa4a0fd7ba24f5f994709f28da8ad2061a5d51be8ffa9df
 EBUILD eselect-ctags-1.8.ebuild 1019 RMD160 069cade6fc3e9cb5c7cbe3ab40dadfcc8d75153f SHA1 6a10caf245f96702b63f907c17e991d5ee99a2e0 SHA256 8ef75aa4fbdf3011949f6af47685da5c0adf656e6d1896887dfadfc0560e03c5
-MISC ChangeLog 3746 RMD160 857ff65bf33d6e38b2166e0f24a08d830fdc4459 SHA1 aa35bd0c5cb309dbd3003ed05f3ebbb2d82ff74b SHA256 033d26d7f5816832a818b1b8d22613f438916699237a57d8fb000664ff412f06
+EBUILD eselect-ctags-1.9.ebuild 1015 RMD160 5a303997f6dc586331a22cb4052b838d1816a054 SHA1 682f46b20fcbc8fcfc73ea0bb2f56ff141316bad SHA256 99e2040cd401c4964ce13e6c70dd529967163404d6c33a4c65c8dbfa87f835b8
+MISC ChangeLog 3871 RMD160 2ba22995ef3ccb36e68263e5796865462a356a40 SHA1 371a486e2188394460932fa329552cf55c3d4b6c SHA256 a7a0c667fbd6352f106b4995d169e064de9234b0d48ea9e2920c66f41076ad2b
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
