@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/eselect-ctags
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-ctags/ChangeLog,v 1.31 2009/04/29 13:03:00 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-ctags/ChangeLog,v 1.32 2009/05/02 13:07:47 ulm Exp $
+
+*eselect-ctags-1.9 (02 May 2009)
+
+  02 May 2009; Ulrich Mueller <ulm@gentoo.org> +eselect-ctags-1.9.ebuild:
+  Version bump.
 
   29 Apr 2009; Ulrich Mueller <ulm@gentoo.org> -eselect-ctags-1.5.ebuild:
   Remove old.
